WickedEngine/Utility/FAudio/include/FACT.h


typedef struct FACTAudioEngine FACTAudioEngine;
typedef struct FACTCue FACTCue;
typedef struct F3DAUDIO_DSP_SETTINGS F3DAUDIO_DSP_SETTINGS;